editing lyric collection

--- a/data_collection/lyric_collection.ipynb
+++ b/data_collection/lyric_collection.ipynb
@@ -211,7 +211,6 @@
     "\n",
     "# Define a function to retrieve lyrics for a list of artists\n",
     "def get_lyrics(artists: list, max_songs: int, output_path: str, write_headers: bool):\n",
-    "    c = 0  # Initialize a counter for the songs\n",
     "    \n",
     "    # Open the CSV file for appending data\n",
     "    csvfile = open(output_path, \"a\")\n",
@@ -227,9 +226,8 @@
     "        try:\n",
     "            # Search for the artist on Genius and get their songs\n",
     "            songs = (genius.search_artist(name, max_songs=max_songs)).songs\n",
-    "            for song in songs:\n",
+    "            for c,song in enumerate(songs):\n",
     "                try:\n",
-    "                    c += 1  # Increment the song counter\n",
     "                    # Create a dictionary for the current song with the desired information\n",
     "                    song_dict = {\n",
     "                        \"title\": song.title,\n",
@@ -241,7 +239,7 @@
     "                    writer.writerow(song_dict)\n",
     "                except Exception as e:\n",
     "                    # If an exception occurs during the song data processing, print the exception\n",
-    "                    print(f\"Exception at {name}: {c}, {str(e)}\")\n",
+    "                    print(f\"Exception at {name}: {c+1}, {str(e)}\")\n",
     "            # Print a success message for the artist once all their songs are processed\n",
     "            print(f\"-----------------{song.artist} SUCCESSFULLY ADDED-------------------- \\n\"\n",
     "                  f\"  SONG COUNT: {c}\")\n",
